--- a/kewve-website-main/backend/package.json
+++ b/kewve-website-main/backend/package.json
@@ -3,7 +3,9 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "nodemon src/index.ts"
+    "dev": "nodemon src/index.ts",
+    "build": "tsc",                   
+    "start": "node dist/index.js"
   },
   "dependencies": {
     "express": "^5.2.1",
