--- a/kewve-website-main/package.json
+++ b/kewve-website-main/package.json
@@ -36,6 +36,7 @@
     "react-sidebar": "^3.0.2",
     "react-use-draggable-scroll": "^0.4.7",
     "resend": "^3.2.0",
+    "stripe": "^20.3.1",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7"
   },
